--- a/angela/angela/LoginViewController.xib
+++ b/angela/angela/LoginViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="14F1713" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="angela" customModuleProvider="target">
@@ -24,11 +24,15 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fundo" translatesAutoresizingMaskIntoConstraints="NO" id="vS4-G8-F89">
                     <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                     <variation key="widthClass=compact" fixedFrame="YES">
-                        <rect key="frame" x="0.0" y="0.0" width="400" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="400" height="714"/>
                     </variation>
                 </imageView>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Senha" textAlignment="natural" minimumFontSize="17" background="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="R5F-2L-CJj">
                     <rect key="frame" x="-25" y="-30" width="97" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="320" id="Niq-M2-6hj"/>
+                        <constraint firstAttribute="height" constant="50" id="wbX-Im-wvp"/>
+                    </constraints>
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
@@ -37,17 +41,39 @@
                             <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
-                    <variation key="widthClass=compact" fixedFrame="YES">
-                        <rect key="frame" x="39" y="366" width="320" height="50"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="Niq-M2-6hj"/>
+                            <exclude reference="wbX-Im-wvp"/>
+                        </mask>
+                    </variation>
+                    <variation key="widthClass=compact">
+                        <mask key="constraints">
+                            <include reference="Niq-M2-6hj"/>
+                            <include reference="wbX-Im-wvp"/>
+                        </mask>
                     </variation>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j65-R5-NOL">
                     <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="320" id="BVc-J4-agz"/>
+                        <constraint firstAttribute="height" constant="50" id="dKX-G7-z2k"/>
+                    </constraints>
                     <state key="normal" image="botao">
                         <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
-                    <variation key="widthClass=compact" fixedFrame="YES">
-                        <rect key="frame" x="39" y="451" width="320" height="50"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="BVc-J4-agz"/>
+                            <exclude reference="dKX-G7-z2k"/>
+                        </mask>
+                    </variation>
+                    <variation key="widthClass=compact">
+                        <mask key="constraints">
+                            <include reference="BVc-J4-agz"/>
+                            <include reference="dKX-G7-z2k"/>
+                        </mask>
                     </variation>
                     <connections>
                         <action selector="loginClicked:" destination="-1" eventType="touchUpInside" id="bZU-u5-GMr"/>
@@ -55,15 +81,32 @@
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ip7-TA-4Rv">
                     <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="400" id="14q-8b-MIu"/>
+                        <constraint firstAttribute="height" constant="30" id="j6v-YO-Gpy"/>
+                    </constraints>
                     <state key="normal" title="Esqueci minha senha ">
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                     </state>
-                    <variation key="widthClass=compact" fixedFrame="YES">
-                        <rect key="frame" x="119" y="509" width="163" height="30"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="14q-8b-MIu"/>
+                            <exclude reference="j6v-YO-Gpy"/>
+                        </mask>
+                    </variation>
+                    <variation key="widthClass=compact">
+                        <mask key="constraints">
+                            <include reference="14q-8b-MIu"/>
+                            <include reference="j6v-YO-Gpy"/>
+                        </mask>
                     </variation>
                 </button>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Nome" textAlignment="natural" minimumFontSize="17" background="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="qvl-Gl-i53">
                     <rect key="frame" x="-25" y="-30" width="97" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="1Pi-zn-3Fk"/>
+                        <constraint firstAttribute="width" constant="320" id="63K-w7-bAc"/>
+                    </constraints>
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
@@ -72,23 +115,58 @@
                             <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
-                    <variation key="widthClass=compact" fixedFrame="YES">
-                        <rect key="frame" x="40" y="308" width="320" height="50"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="1Pi-zn-3Fk"/>
+                            <exclude reference="63K-w7-bAc"/>
+                        </mask>
+                    </variation>
+                    <variation key="widthClass=compact">
+                        <mask key="constraints">
+                            <include reference="1Pi-zn-3Fk"/>
+                            <include reference="63K-w7-bAc"/>
+                        </mask>
                     </variation>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Participe de seus eventos com segurança e tranquilidade" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8cN-gQ-ecX">
                     <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="280" id="fq4-pN-IEK"/>
+                        <constraint firstAttribute="height" constant="76" id="txP-bT-Btm"/>
+                    </constraints>
                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
-                    <variation key="widthClass=compact" fixedFrame="YES">
-                        <rect key="frame" x="60" y="195" width="280" height="76"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="fq4-pN-IEK"/>
+                            <exclude reference="txP-bT-Btm"/>
+                        </mask>
+                    </variation>
+                    <variation key="widthClass=compact">
+                        <mask key="constraints">
+                            <include reference="fq4-pN-IEK"/>
+                            <include reference="txP-bT-Btm"/>
+                        </mask>
                     </variation>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo-2" translatesAutoresizingMaskIntoConstraints="NO" id="M4O-il-d0a">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo-3" translatesAutoresizingMaskIntoConstraints="NO" id="M4O-il-d0a">
                     <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                    <variation key="widthClass=compact" fixedFrame="YES">
-                        <rect key="frame" x="80" y="59" width="240" height="128"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="240" id="2pJ-gC-yc2"/>
+                        <constraint firstAttribute="height" constant="128" id="Bqv-Eo-Doe"/>
+                    </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="2pJ-gC-yc2"/>
+                            <exclude reference="Bqv-Eo-Doe"/>
+                        </mask>
+                    </variation>
+                    <variation key="widthClass=compact">
+                        <mask key="constraints">
+                            <include reference="2pJ-gC-yc2"/>
+                            <include reference="Bqv-Eo-Doe"/>
+                        </mask>
                     </variation>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SY5-eG-iwQ">
@@ -102,11 +180,24 @@
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6fV-2T-YqX">
                     <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="JH8-Fx-CLY"/>
+                        <constraint firstAttribute="width" constant="400" id="uAe-I1-xpl"/>
+                    </constraints>
                     <state key="normal" title="Ainda não possui cadastro? Cadastre-se!">
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                     </state>
-                    <variation key="widthClass=compact" fixedFrame="YES">
-                        <rect key="frame" x="52" y="541" width="288" height="30"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="JH8-Fx-CLY"/>
+                            <exclude reference="uAe-I1-xpl"/>
+                        </mask>
+                    </variation>
+                    <variation key="widthClass=compact">
+                        <mask key="constraints">
+                            <include reference="JH8-Fx-CLY"/>
+                            <include reference="uAe-I1-xpl"/>
+                        </mask>
                     </variation>
                     <connections>
                         <action selector="criarClicked:" destination="-1" eventType="touchUpInside" id="yue-H4-wbK"/>
@@ -114,6 +205,24 @@
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="j65-R5-NOL" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="2Lo-UA-oP4"/>
+                <constraint firstAttribute="trailing" secondItem="ip7-TA-4Rv" secondAttribute="trailing" id="52U-jz-yCn"/>
+                <constraint firstItem="M4O-il-d0a" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="9NY-ak-jwN"/>
+                <constraint firstItem="6fV-2T-YqX" firstAttribute="top" secondItem="ip7-TA-4Rv" secondAttribute="bottom" constant="2" id="AEe-3u-dlv"/>
+                <constraint firstItem="6fV-2T-YqX" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="FmP-1y-4eH"/>
+                <constraint firstItem="8cN-gQ-ecX" firstAttribute="top" secondItem="M4O-il-d0a" secondAttribute="bottom" constant="8" id="GQG-9A-YSu"/>
+                <constraint firstItem="R5F-2L-CJj" firstAttribute="top" secondItem="qvl-Gl-i53" secondAttribute="bottom" constant="8" id="NDz-Ub-ryb"/>
+                <constraint firstItem="8cN-gQ-ecX" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Oqu-ce-5Rc"/>
+                <constraint firstItem="qvl-Gl-i53" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="WR8-xn-8BD"/>
+                <constraint firstItem="R5F-2L-CJj" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="YGV-P0-0de"/>
+                <constraint firstItem="qvl-Gl-i53" firstAttribute="top" secondItem="8cN-gQ-ecX" secondAttribute="bottom" constant="37" id="ftW-rb-piX"/>
+                <constraint firstItem="ip7-TA-4Rv" firstAttribute="top" secondItem="j65-R5-NOL" secondAttribute="bottom" constant="8" id="gWk-Mn-2RJ"/>
+                <constraint firstItem="M4O-il-d0a" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="59" id="mAM-Nw-V35"/>
+                <constraint firstItem="ip7-TA-4Rv" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="nDv-Bb-sGi"/>
+                <constraint firstAttribute="trailing" secondItem="6fV-2T-YqX" secondAttribute="trailing" id="oTj-PK-VSu"/>
+                <constraint firstItem="j65-R5-NOL" firstAttribute="top" secondItem="R5F-2L-CJj" secondAttribute="bottom" constant="35" id="vEN-bX-hht"/>
+            </constraints>
             <variation key="default">
                 <mask key="subviews">
                     <exclude reference="vS4-G8-F89"/>
@@ -125,6 +234,24 @@
                     <exclude reference="M4O-il-d0a"/>
                     <exclude reference="SY5-eG-iwQ"/>
                     <exclude reference="6fV-2T-YqX"/>
+                </mask>
+                <mask key="constraints">
+                    <exclude reference="NDz-Ub-ryb"/>
+                    <exclude reference="YGV-P0-0de"/>
+                    <exclude reference="WR8-xn-8BD"/>
+                    <exclude reference="ftW-rb-piX"/>
+                    <exclude reference="AEe-3u-dlv"/>
+                    <exclude reference="FmP-1y-4eH"/>
+                    <exclude reference="oTj-PK-VSu"/>
+                    <exclude reference="52U-jz-yCn"/>
+                    <exclude reference="gWk-Mn-2RJ"/>
+                    <exclude reference="nDv-Bb-sGi"/>
+                    <exclude reference="2Lo-UA-oP4"/>
+                    <exclude reference="vEN-bX-hht"/>
+                    <exclude reference="GQG-9A-YSu"/>
+                    <exclude reference="Oqu-ce-5Rc"/>
+                    <exclude reference="9NY-ak-jwN"/>
+                    <exclude reference="mAM-Nw-V35"/>
                 </mask>
             </variation>
             <variation key="widthClass=compact">
@@ -139,11 +266,30 @@
                     <include reference="SY5-eG-iwQ"/>
                     <include reference="6fV-2T-YqX"/>
                 </mask>
+                <mask key="constraints">
+                    <include reference="NDz-Ub-ryb"/>
+                    <include reference="YGV-P0-0de"/>
+                    <include reference="WR8-xn-8BD"/>
+                    <include reference="ftW-rb-piX"/>
+                    <include reference="AEe-3u-dlv"/>
+                    <include reference="FmP-1y-4eH"/>
+                    <include reference="oTj-PK-VSu"/>
+                    <include reference="52U-jz-yCn"/>
+                    <include reference="gWk-Mn-2RJ"/>
+                    <include reference="nDv-Bb-sGi"/>
+                    <include reference="2Lo-UA-oP4"/>
+                    <include reference="vEN-bX-hht"/>
+                    <include reference="GQG-9A-YSu"/>
+                    <include reference="Oqu-ce-5Rc"/>
+                    <include reference="9NY-ak-jwN"/>
+                    <include reference="mAM-Nw-V35"/>
+                </mask>
             </variation>
+            <point key="canvasLocation" x="361" y="275"/>
         </view>
     </objects>
     <resources>
-        <image name="Logo-2" width="486" height="152"/>
+        <image name="Logo-3" width="485" height="161"/>
         <image name="botao" width="552" height="102"/>
         <image name="fundo" width="750" height="1334"/>
         <image name="textfield" width="550" height="100"/>
